...
    <string name="autoPauseEnd">End of Automatic Pause</string>
    <string name="autoPauseEndDescription">in 24 hour time, e.g. 13.30</string>
    <string name="flatteningEnabled">Enable Time Flattening</string>
    <string name="type">Type</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="saveChanges">Save Changes</string>
    <string name="comment_hint">Hint (optional)</string>
    <string name="optional">(optional)</string>
    <string name="notification">Notification</string>
    <string name="notificationEnabled">Notification enabled</string>
    <string name="notificationDescription">only shown when clocked in</string>
    <string name="notificationAlways">Always show notification</string>
...
    <string name="restore_warning">Delete everything and replace it with the content of the restore files: \"%1$s\"?</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="appearance">Appearance</string>
    <string name="show_navigation_buttons">Show navigation buttons</string>
    <string name="current">Current</string>
    <string name="last">Last</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="last_and_current">Last + current</string>
    <string name="exportRange">Export Range</string>
    <string name="eventGrouping">Grouping</string>
    <string name="eventGroupingNone">Events: raw (all events)</string>
...
    <string name="errorDateOrTimeNotSelected">Date or time not selected</string>
    <string name="errorTaskNotSelected">No task selected</string>
    <string name="documentTreePermissionsRequestTitle">Storage Permission</string>
    <string name="documentTreePermissionsRequestTextOnStart">This app needs a little space on your device to save a daily backup of your data and the reports you generate.\n\nPlease choose a directory in the following dialog, e.g. \"Documents\". Of course, you\'re also welcome to create a custom directory.\n\nIf you don\'t want that now, no daily backups will be created and you can\'t generate any
    <string name="documentTreePermissionsRequestTextOnUserAction">This feature needs to access your device\'s storage.\n\nPlease choose a directory in the following dialog, e.g. \"Documents\". Of course, you\'re also welcome to create a custom directory.\n\nIf you don\'t want that now, the feature will not be available.</string>
    <string name="documentTreePermissionsRequestTextOnReselect">This app needs a little space on your device to save a daily backup of your data and the reports you generate.\n\nPlease select the directory of your choice in the following dialog, e.g. \"Documents\". Of course, you\'re also welcome to create a new directory.\n\nIf you cancel this, the directory you selected previously will stay acti
    <string name="notNow">Not Now</string>
    <string name="enableFlexiTimeOrItWontWork">Please configure and enable Flexi Time in the options, else this won\'t work.</string>
    <string name="alsoOnNonWorkingDays">also on non-working days</string>
    <string name="targetTime">Target Time</string>
    <string name="pebbleNotification">Notification on Pebble</string>
    <string name="pebbleNotificationDescription">notify events on connected Pebble watch</string>
    <string name="wifiBasedTrackingCheckInterval">Wi-Fi check interval</string>
    <string name="wifiBasedTrackingCheckIntervalDescription">search for Wi-Fi networks only in this interval (smaller is more exact, but uses slightly more battery)</string>
    <string name="wifiBasedTrackingCheckIntervalDescriptionExtension">numbers between 1 and 60 are allowed (interpreted as minutes)</string>
    <string name="userInterface">User Interface</string>
    <string name="showDecimalTimeAmounts">Decimal time amounts</string>
    <string name="showDecimalTimeAmountsDescription">in the main table, show time sums also as decimal number additionally to the normal representation with hours and minutes</string>
    <string name="newPeriod">New Period</string>
    <string name="editPeriod">Edit Period</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="noFileManagerApp">No file manager app available which supports opening directories!\n\nPlease install one, e.g. "Simple File Manager" by "Simple Mobile Tools".</string>
    <string name="notificationTitle1">worked %1$s so far</string>
    <string name="notificationTitle2">clocked in since %1$s</string>
...
