<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/weekTable"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="0,1,2,3,4">

    <!-- title row -->
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_in_table">

        <TextView
            android:id="@+id/topLeftCorner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onespace"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?attr/date_regular_work" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/in"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?attr/date_regular_work" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/out"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?attr/date_regular_work" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/worked"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?attr/date_regular_work" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flexi"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?attr/date_regular_work" />
    </TableRow>

    <!-- monday row -->
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="@dimen/padding_in_table">

        <TextView
            android:id="@+id/mondayDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?attr/date_regular_work" />

        <TextView
            android:id="@+id/mondayIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?attr/date_regular_work" />

        <TextView
            android:id="@+id/mondayOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?attr/date_regular_work" />

        <TextView
            android:id="@+id/mondayWorked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?attr/date_regular_work" />

        <TextView
            android:id="@+id/mondayFlexi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?attr/date_regular_work" />
    </TableRow>

    <!-- tuesday row -->
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="@dimen/padding_in_table">

        <TextView
            android:id="@+id/tuesdayDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?attr/date_regular_work" />

        <TextView
            android:id="@+id/tuesdayIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?attr/date_regular_work" />

        <TextView
            android:id="@+id/tuesdayOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?attr/date_regular_work" />

        <TextView
            android:id="@+id/tuesdayWorked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?attr/date_regular_work" />

        <TextView
            android:id="@+id/tuesdayFlexi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?attr/date_regular_work" />
    </TableRow>

    <!-- wednesday row -->
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="@dimen/padding_in_table">

        <TextView
            android:id="@+id/wednesdayDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?attr/date_regular_work" />

        <TextView
            android:id="@+id/wednesdayIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?attr/date_regular_work" />

        <TextView
            android:id="@+id/wednesdayOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?attr/date_regular_work" />

        <TextView
            android:id="@+id/wednesdayWorked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?attr/date_regular_work" />

        <TextView
            android:id="@+id/wednesdayFlexi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?attr/date_regular_work" />
    </TableRow>

    <!-- thursday row -->
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="@dimen/padding_in_table">

        <TextView
            android:id="@+id/thursdayDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?attr/date_regular_work" />

        <TextView
            android:id="@+id/thursdayIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?attr/date_regular_work" />

        <TextView
            android:id="@+id/thursdayOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?attr/date_regular_work" />

        <TextView
            android:id="@+id/thursdayWorked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?attr/date_regular_work" />

        <TextView
            android:id="@+id/thursdayFlexi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?attr/date_regular_work" />
    </TableRow>

    <!-- friday row -->
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="@dimen/padding_in_table">

        <TextView
            android:id="@+id/fridayDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?attr/date_regular_work" />

        <TextView
            android:id="@+id/fridayIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?attr/date_regular_work" />

        <TextView
            android:id="@+id/fridayOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?attr/date_regular_work" />

        <TextView
            android:id="@+id/fridayWorked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?attr/date_regular_work" />

        <TextView
            android:id="@+id/fridayFlexi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?attr/date_regular_work" />
    </TableRow>

    <!-- saturday row -->
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="@dimen/padding_in_table">

        <TextView
            android:id="@+id/saturdayDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?attr/date_regular_work" />

        <TextView
            android:id="@+id/saturdayIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?attr/date_regular_work" />

        <TextView
            android:id="@+id/saturdayOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?attr/date_regular_work" />

        <TextView
            android:id="@+id/saturdayWorked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?attr/date_regular_work" />

        <TextView
            android:id="@+id/saturdayFlexi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?attr/date_regular_work" />
    </TableRow>

    <!-- sunday row -->
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="@dimen/padding_in_table">

        <TextView
            android:id="@+id/sundayDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?attr/date_regular_work" />

        <TextView
            android:id="@+id/sundayIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?attr/date_regular_work" />

        <TextView
            android:id="@+id/sundayOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?attr/date_regular_work" />

        <TextView
            android:id="@+id/sundayWorked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?attr/date_regular_work" />

        <TextView
            android:id="@+id/sundayFlexi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?attr/date_regular_work" />
    </TableRow>

    <!-- total row -->
    <TableRow
        android:id="@+id/totalRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="@dimen/padding_in_table">

        <TextView
            android:id="@+id/totalLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="3"
            android:text="@string/total"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?attr/date_regular_work" />

        <TextView
            android:id="@+id/totalWorked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?attr/date_regular_work" />

        <TextView
            android:id="@+id/totalFlexi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?attr/date_regular_work" />
    </TableRow>
</TableLayout>
