...
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/save"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/saveChanges" />
    </LinearLayout>

...
